--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
+  text-align: left;
+}
+
+.Response{
+  align-items: left;
   text-align: center;
+  padding: 3%;
+  margin: 3%;
+  font-size: 40px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color:azure;
+}
+
+body{
+  padding-top: 2%;
+  padding-left: 1%;
 }
 
 .App-logo {
